modules/network/private.tf
resource "aws_subnet" "eks_subnet_private_1a" {
    vpc_id = aws_vpc.eks_vpc.id
    cidr_block = cidrsubnet(var.cidr_block, 8, 3)
    availability_zone = "${data.aws_region.current.name}a" #Interpolação de variável
    
    tags = merge(
        var.tags,
        {
            Name = "${var.project_name}-priv-subnet-1a"
            "kubernetes.io/role/internal-elb" = 1 #Requisito EKS
        }
    )
}

resource "aws_subnet" "eks_subnet_private_1b" {
    vpc_id = aws_vpc.eks_vpc.id
    cidr_block = cidrsubnet(var.cidr_block, 8, 4)
    availability_zone = "${data.aws_region.current.name}b" #Interpolação de variável

    tags = merge(
        var.tags,
        {
            Name = "${var.project_name}-priv-subnet-1b"
            "kubernetes.io/role/internal-elb" = 1 #Requisito EKS
        }
    )
}

resource "aws_route_table_association" "eks-rtb-assoc-priv-1a" {
    subnet_id = aws_subnet.eks_subnet_private_1a.id
    route_table_id = aws_route_table.eks_private_route_table_1a.id
}

resource "aws_route_table_association" "eks-rtb-assoc-priv-1b" {
    subnet_id = aws_subnet.eks_subnet_private_1b.id
    route_table_id = aws_route_table.eks_private_route_table_1b.id
}
